--- a/{{cookiecutter.package_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.package_name}}/.github/workflows/test.yml
@@ -1,43 +1,30 @@
 name: Test Agent API
-
 on:
   push:
     branches: [ "main", "master" ]
   pull_request:
     branches: [ "main", "master" ]
-
-permissions:
-  contents: read
-
 jobs:
   build:
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        # Test all supported Python versions under Ubuntu
-        os: [ubuntu-latest]
         python-version: ['3.10', '3.11', '3.12', '3.13']
-
-    runs-on: {% raw %}${{ matrix.os }}{% endraw %}
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python {% raw %}${{ matrix.python-version }}{% endraw %}
-      uses: actions/setup-python@v5
-      with:
-        python-version: {% raw %}${{ matrix.python-version }}{% endraw %}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements_dev.txt
-    - name: Lint with ruff
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        ruff check --select=E9,F63,F7,F82
-        # exit-zero treats all errors as warnings
-        ruff check --exit-zero --statistics
-    - name: Install project
-      run: |
-        pip install .
-    - name: Run tests
-      run: |
-        pytest
+      - uses: actions/checkout@v4
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-dependency-glob: uv.lock
+      - name: Install the project
+        run: uv sync --locked --all-extras
+      - name: Lint with ruff
+        run: |
+          ruff format . --check
+          ruff check .
+      - name: Test with pytest
+        run: |
+          pytest tests/
