--- a/{{cookiecutter.package_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.package_name}}/.github/workflows/test.yml
@@ -6,11 +6,13 @@ on:
     branches: [ "main", "master" ]
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
+        os: [ubuntu-latest]
         python-version: ['3.10', '3.11', '3.12', '3.13']
+
+    runs-on: {% raw %}${{ matrix.os }}{% endraw %}
+
     steps:
       - uses: actions/checkout@v4
       - name: Install uv and set the python version
